feat: add update user api
